New bean definition builder replacement for visitor/writers